[project]
name = "pysuso"
version = "0.1.0"
description = "Sudoku sovler written in Python"
authors = [
    {name = "Robert Schmidt", email = "allthingscoding21th@gmail.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sudoku"]

[tool.hatch.build.targets.sdist]
include = ["src/*.py"]

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.2.0",
    "mypy>=1.8.0",
    "pylint>=3.0.4",
    "isort>=5.13.2",
    "bandit[baseline,toml]>=1.7.7",
]

[tool.black]
line-length=120
preview = true

[tool.isort]
profile = "black"

[tool.pylint]
max-line-length = 120
